--- a/app/templates/user/layout_user.html
+++ b/app/templates/user/layout_user.html
@@ -11,6 +11,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.dataTables.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/3.1.1/css/buttons.dataTables.css">
       <style>
         body { min-height: 100vh; font-family: 'Raleway', sans-serif; font-weight: 600; }
         .navbar{ height: 10vh; position: fixed; top: 0; z-index: 2; left: 0; width: 250px; background-color: #f8f9fa00; }
