ubah warna tombol export csv excell pdf print
Co-Authored-By: zulfatunnisa <80380143+zulfatunnisa@users.noreply.github.com>

--- a/app/templates/admin/history_konsultasi.html
+++ b/app/templates/admin/history_konsultasi.html
@@ -150,11 +150,46 @@
     .table tbody td {
       text-align: center;
     }
+    .buttons-csv{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+    }
+    .buttons-excel{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+
+    }
+    .buttons-pdf{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+
+
+    }
+    .buttons-print{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+
+
+    }
+
     .btn-success {
-    background-color: #28a745;
-    color: white;
-    border-radius: 5px;
-    padding: 5px 10px;
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
 }
 
 .btn-danger {
