--- a/app/templates/user/history_konsultasi.html
+++ b/app/templates/user/history_konsultasi.html
@@ -1,4 +1,36 @@
 {% extends 'user/layout_user.html' %}
+{% block css %}
+<style>
+     .buttons-csv{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+    }
+    .buttons-excel{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+    }
+    .buttons-pdf{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+    }
+    .buttons-print{
+    background-color: #1d7532!important;
+    color: white!important;
+    border-radius: 5px!important;
+    padding: 5px 10px!important;
+    height:40px!important;
+    }
+</style>
+{% endblock %}
 {% block content %}  
 <!-- Content -->
 <div class="content" id="mainContent">
