--- a/app/templates/user/layout_user.html
+++ b/app/templates/user/layout_user.html
@@ -41,7 +41,8 @@
         .border-medium { border-radius: 10px; }
         .custom-border-info { border-color: #1F4590; }
         .text-white{ color: #fff; }
-      </style>            
+      </style>    
+      {% block css %} {% endblock %}        
 </head>
 <body>
   <!-- Topbar -->
