--- a/app/templates/admin/history_konsultasi.html
+++ b/app/templates/admin/history_konsultasi.html
@@ -39,6 +39,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/buttons/3.1.1/js/buttons.html5.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/3.1.1/js/buttons.print.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
@@ -396,11 +397,37 @@
   <script>
   $(document).ready(function() {
     $('#data-table').DataTable({ searching: false,
-      layout: {
-        topStart: {
-            buttons: ['csv', 'excel', 'pdf', 'print']
-        }
-    } 
+        dom: 'Bfrtip',
+        buttons: [
+            {
+                extend: 'csvHtml5',
+                text: 'Export CSV',
+                exportOptions: {
+                    columns: ':not(:last-child)' // Mengekspor semua kolom kecuali kolom terakhir
+                }
+            },
+            {
+                extend: 'excelHtml5',
+                text: 'Export Excel',
+                exportOptions: {
+                    columns: ':not(:last-child)'
+                }
+            },
+            {
+                extend: 'pdfHtml5',
+                text: 'Export PDF',
+                exportOptions: {
+                    columns: ':not(:last-child)'
+                }
+            },
+            {
+                extend: 'print',
+                text: 'Print',
+                exportOptions: {
+                    columns: ':not(:last-child)'
+                }
+            }
+        ]
 
   });
     
